--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/engine/riti"]
 	path = src/engine/riti
-	url = https://github.com/OpenBangla/riti.git
+	url = https://github.com/asifakonjee/riti.git
 	branch = master
