--- a/src/engine/riti/Cargo.toml
+++ b/src/engine/riti/Cargo.toml
@@ -3,8 +3,8 @@ name = "riti"
 version = "0.1.0"
 authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.63.0"
+edition = "2018"
+rust-version = "1.44.1"
 
 [lib]
 crate-type = ["staticlib"]
@@ -16,14 +16,11 @@ bench = []
 codegen-units = 1
 
 [dependencies]
-ahash = { version = "0.8", features = ["serde"] }
+ahash = { version = "0.7", default-features = false }
 emojicon = "0.3"
 serde_json = "1.0"
-regex = "~1.9" # For maintaining MSRV
+regex = "1.5"
 stringplus = "0.1"
 edit-distance = "2.1"
 okkhor = "0.5"
 poriborton = "0.2"
-
-[dev-dependencies]
-rustversion = "1.0"
