--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,8 +70,10 @@ if(OS_LINUX)
     include(FindPkgConfig)
     find_package(PkgConfig)
 
-    option(ENABLE_IBUS "Enable IBus support" OFF)
-    option(ENABLE_FCITX "Enable Fcitx support" OFF)
+    option(ENABLE_IBUS "Enable IBus support" ON)
+    option(ENABLE_FCITX "Enable Fcitx support" ON)
+    set(ENABLE_IBUS ON)
+    set(ENABLE_FCITX ON)
 
     if((NOT ENABLE_IBUS) AND (NOT ENABLE_FCITX))
         message(FATAL_ERROR "Please set atleast ENABLE_IBUS or ENABLE_FCITX to be ON to build a backend")
