--- a/src/engine/riti/.github/workflows/main.yml
+++ b/src/engine/riti/.github/workflows/main.yml
@@ -1,35 +1,47 @@
+# From https://github.com/actions-rs/meta/blob/master/recipes/msrv.md
 on: [push, pull_request]
 
 name: Continuous integration
 
-# Make sure CI fails on all warnings, including Clippy lints
-env:
-  RUSTFLAGS: "-Dwarnings"
-
 jobs:
+  check:
+    name: Check
+    strategy:
+      matrix:
+        rust:
+          - stable
+          - 1.41.1
+          - nightly
+        platform: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: check
+
   test:
     name: Test Suite
     strategy:
       matrix:
         rust:
           - stable
-          - 1.63.0 # MSRV for linux distributions (>= Debian 12)
+          - 1.41.1
           - nightly
-        platform: [ubuntu-latest, windows-latest, macos-latest]
+        platform: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@master
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
+          profile: minimal
           toolchain: ${{ matrix.rust }}
-      - run: cargo test
-
-  lint:
-    name: Clippy Linting
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
+          override: true
+      - uses: actions-rs/cargo@v1
         with:
-          components: "clippy"
-      - run: cargo clippy
+          command: test
