--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ if(OS_LINUX)
     option(ENABLE_IBUS "Enable IBus support" OFF)
     option(ENABLE_FCITX "Enable Fcitx support" OFF)
     set(ENABLE_FCITX ON)
-    set(ENABLE_IBUS ON)
+    set(ENABLE_IBUS OFF)
 
     if((NOT ENABLE_IBUS) AND (NOT ENABLE_FCITX))
         message(FATAL_ERROR "Please set atleast ENABLE_IBUS or ENABLE_FCITX to be ON to build a backend")
