--- a/src/engine/riti/cbindgen.toml
+++ b/src/engine/riti/cbindgen.toml
@@ -1,4 +1,4 @@
-language = "C++"
+language = "C"
 header = "/* Text to put at the beginning of the generated file. Probably a license. */"
 include_guard = "RITI_H"
 autogen_warning = """
@@ -12,3 +12,4 @@ line_length = 80
 tab_width = 4
 documentation_style = "c"
 style = "both"
+cpp_compat = true
